--- a/q.html
+++ b/q.html
@@ -11,20 +11,16 @@
             <div class="dropdown">
                 <span>Q-Rooms</span>
                 <div id="qrooms-dropdown" class="dropdown-content">
-                    <a href="">VGO - F. Vogels - C207</a>
-                    <a href="">PVM - F. Vogels - C180</a>
-                    <a href="">TDM - D. Trumpsteen - C009</a>
+
                 </div>
             </div>
             <div id="create-qroom"></div>
             <button id="signout">Sign in as another user</button>
         </header>
         <main>
-            <div id="rooms-list-div">
-                <h2>Click a Q-Room to see the queue and/or add yourself to the queue!</h1>
-                <ul id="rooms-list">
-                    
-                </ul>
+            <h3 id="amount-in-q"></h3>
+            <div id="q">
+
             </div>
         </main>
 
@@ -48,6 +44,6 @@
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/Cookies.js"></script>
         <script type="text/javascript" src="js/header.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/q.js"></script>
     </body>
 </html>
