weergeven, toevoegen en verwijderen uit aueue

--- a/q.html
+++ b/q.html
@@ -18,9 +18,18 @@
             <button id="signout">Sign in as another user</button>
         </header>
         <main>
-            <h3 id="amount-in-q"></h3>
+            <div id="div-q-head">
+                <h3 id="amount-in-q"></h3>
+                <div id="div-q-head-buttons">
+                    <button id="enter-q" class="no-margin">Enter Q</button>
+                    <button id="leave-q" class="no-margin">Leave Q</button>
+                </div>
+            </div>
+            
             <div id="q">
-
+                <div id="firstSix"></div>
+                <div id="secondSix"></div>
+                <div id="vert-divider"></div>
             </div>
         </main>
 
